--- a/paletteduck-client/package.json
+++ b/paletteduck-client/package.json
@@ -15,6 +15,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
+    "react-sketch-canvas": "^6.2.0",
     "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
